add sortable and drag&drop
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21257

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/Styles.css
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/Styles.css
@@ -2,3 +2,13 @@
 }
 
 .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
+.pading-top-s {
+    margin-top: 2px !important;
+}
+.dragbelzone{
+    background-color: #FFF;
+    padding:5px ;
+}
+.dragbelzone .handeldrag{
+   cursor:move ;
+}
