--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Default.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Default.html
@@ -46,34 +46,28 @@
         <label>Toggle</label>
     </div>
     Select
-   
-    <div class="ui floating dropdown labeled search icon button">
-        <input type="text" />
-        <div>
-            <div ng-repeat="c in selectedCountries">{{c}}</div>
+    
+    <div class="ui simple dropdown optional coupling  button" >
+        <input type="text" value="test" />
+        <div style="min-width: 150px; max-width: 150px; width: 150px; white-space: nowrap;overflow:hidden; text-overflow: ellipsis;white-space: nowrap; height: 15px;">
+            <div ng-show="selectedCountries.length <= 2" ng-hide="selectedCountries.length > 2" style="display:inline-block;" ng-repeat="c in selectedCountries">{{c}}<span ng-if="selectedCountries.length > 0 && $index < selectedCountries.length -1  "> ,</span> </div>
+            <div style=" width: 100px;max-width:100px; white-space: nowrap; text-overflow: ellipsis;white-space: nowrap;" ng-show="selectedCountries.length > 2" ng-hide="selectedCountries.length <= 2">
+                <span>{{selectedCountries.length}} items selected</span>
+            </div>                    
         </div>
         <div class="menu" tabindex="-1">
-            <div class="item" ng-click="selectLanguage('Arabic')">Arabic</div>
-            <div class="item" ng-click="selectLanguage('Chinese')">Chinese</div>
-            <div class="item" ng-click="selectLanguage('Danish')">Danish</div>
-            <div class="item">Dutch</div>
-            <div class="item">English</div>
-            <div class="item">French</div>
-            <div class="item">German</div>
-            <div class="item">Greek</div>
-            <div class="item">Hungarian</div>
-            <div class="item">Italian</div>
-            <div class="item">Japanese</div>
-            <div class="item">Korean</div>
-            <div class="item">Lithuanian</div>
-            <div class="item">Persian</div>
-            <div class="item">Polish</div>
-            <div class="item">Portuguese</div>
-            <div class="item">Russian</div>
-            <div class="item">Spanish</div>
-            <div class="item">Swedish</div>
-            <div class="item">Turkish</div>
-            <div class="item">Vietnamese</div>
+            <div class="header" style="width: 200px; white-space: normal; ">
+                <div class="ui label pading-top-s" ng-repeat="obj in selectedCountries">
+                    {{obj}}
+                    <i class="delete icon" ng-click="selectLanguage(obj)"></i>
+                </div>
+            </div>
+            <div ng-repeat="l in Countries"  ng-click="selectLanguage(l)" class="item ">
+                <div class="ui checkbox">
+                    <input ng-checked="selectedCountries.indexOf(l) > -1" type="checkbox">
+                    <label>{{l}}</label>
+                </div>
+            </div>            
         </div>
     </div>
 
