Add Textbox with button
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21266

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/VTextboxButton.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/VTextboxButton.html
@@ -1,4 +1,4 @@
 ﻿<div class="ui action input">
-    <input type="text" placeholder="Search...">
-    <button class="ui button">Search</button>
+    <input type="text" placeholder="{{holder}}" ng-model="text">
+    <button class="ui button" ng-click="btnclick()">{{btnText}}</button>
 </div>
