--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
@@ -6,6 +6,10 @@
 <v-textbox type="search" placeholder="Custom Place Holder" text="Input" ></v-textbox>
 <v-textbox type="mail" text="Input"></v-textbox>
 
+<v-textbox type="Button" text="Input" buttontext="Alert" btn-click="alertMsg()"></v-textbox>
+
+
+
 
 
 {{Input}}
