--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
@@ -7,7 +7,11 @@
 <v-textbox type="mail" text="Input"></v-textbox>
 
 <v-textbox type="Button" text="Input" buttontext="Alert" btn-click="alertMsg()"></v-textbox>
+<br />
+<v-gridview type="Standard" datasource="items" header="header">
 
 
+
+</v-gridview>
 
 {{Input}}
