Grid View Directive
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21293

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/VGridviewStandard.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/VGridviewStandard.html
@@ -1,9 +1,9 @@
-﻿<table>
+﻿<table class="ui table">
     <thead>
         <th ng-repeat="n in header">{{n.name}}</th>
     </thead>
-    <tbody >
-        <tr ng-repeat="n in source" ng-transclude>
-        </tr>
+    <tbody>
+        <tr id="trbody" ng-repeat="n in source"></tr>
     </tbody>
 </table>
+
