--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
@@ -8,10 +8,11 @@
 
 <v-textbox type="Button" text="Input" buttontext="Alert" btn-click="alertMsg()"></v-textbox>
 <br />
-<v-gridview type="Standard" datasource="items" header="header">
 
+<v-gridview type="Standard" datasource="items" header="header" uniquecname="name,age">
+</v-gridview>
 
-
+<v-gridview type="Standard" datasource="items" header="header" uniquecname="age,name">
 </v-gridview>
 
 {{Input}}
