Add views Template
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21296

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Views/VGridviewV1.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Views/VGridviewV1.html
@@ -1,9 +1,10 @@
-﻿<table  class="ui table">
+﻿<table class="ui table">
     <thead>
-        <th ng-repeat="n in gridoptions.header">{{n}}</th>
+    <th>Name</th>
     </thead>
     <tbody>
         <tr id="trbody" ng-repeat="n in gridoptions.data">
+            <td>{{n.name}}</td>
         </tr>
     </tbody>
 </table>
