Added Chart1 pages
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21298

--- a/TOneV2/Code/TOneV2/TOne.Web/Views/Home/Index.cshtml
+++ b/TOneV2/Code/TOneV2/TOne.Web/Views/Home/Index.cshtml
@@ -17,7 +17,8 @@
 <body ng-controller="mainCtrl">
     <a href="#/Default">Default</a> |
     <a href="#/TestView">Test View</a> | 
-    <a href="#/RouteRuleEditor">Route Rule Editor</a>
+    <a href="#/RouteRuleEditor">Route Rule Editor</a> | 
+    <a href="#/Chart1">Chart 1</a>
     <div ng-view></div>
 </body>
 
