added zing chart and high chart
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21306

--- a/TOneV2/Code/TOneV2/TOne.Web/Views/Home/Index.cshtml
+++ b/TOneV2/Code/TOneV2/TOne.Web/Views/Home/Index.cshtml
@@ -18,7 +18,8 @@
     <a href="#/Default">Default</a> |
     <a href="#/TestView">Test View</a> | 
     <a href="#/RouteRuleEditor">Route Rule Editor</a> | 
-    <a href="#/Chart1">Chart 1</a>
+    <a href="#/ZingChart">Zing Chart</a> | 
+    <a href="#/HighChart">HighChart</a>
     <div ng-view></div>
 </body>
 
