--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/ChartPrototypes/HighChart.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/ChartPrototypes/HighChart.html
@@ -5,4 +5,5 @@
 
 <div id="container" style="height: 500px; width: 700px; display: inline-block;"></div>
 <div id="container2" style="height: 500px; width: 700px; display: inline-block; "></div>
-<div id="container1" style="height: 500px; width: 700px;"></div>
+<div id="container1" style="height: 500px; width: 700px;  "></div>
+<div id="container4" style="height: 700PX; width: 100%;  "></div>
