--- a/TOneV2/Code/TOneV2/TOne.Web/Views/Home/Index.cshtml
+++ b/TOneV2/Code/TOneV2/TOne.Web/Views/Home/Index.cshtml
@@ -19,7 +19,10 @@
     <a href="#/TestView">Test View</a> | 
     <a href="#/RouteRuleEditor">Route Rule Editor</a> | 
     <a href="#/ZingChart">Zing Chart</a> | 
-    <a href="#/HighChart">HighChart</a>
+    <a href="#/HighChart">HighChart</a> |
+    <a href="#/HighChartSparkline">HighChart Sparkline</a> |
+    <a href="#/FusionChart">Fusion Chart</a>|
+    <a href="#/CanvasJSChart">CanvasJS Chart</a>
     <div ng-view></div>
 </body>
 
