rename Js, Html files.
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21320

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
@@ -1,12 +1,12 @@
 ﻿<h1>Test View</h1>
-<v-textbox type="Standard" placeholder="Username" text="Input"></v-textbox>
-<v-textbox type="Icon" placeholder="Search .." icon="circular search" text="Input"></v-textbox>
-<v-textbox type="Icon" placeholder="Search .." icon="search" text="Input"></v-textbox>
-<v-textbox type="search" text="Input"></v-textbox>
-<v-textbox type="search" placeholder="Custom Place Holder" text="Input" ></v-textbox>
-<v-textbox type="mail" text="Input"></v-textbox>
+<v-textbox type="Standard" placeholder="Username" value="Input"></v-textbox>
+<v-textbox type="Icon" placeholder="Search .." icon="circular search" value="Input"></v-textbox>
+<v-textbox type="Icon" placeholder="Search .." icon="search" value="Input"></v-textbox>
+<v-textbox type="search" value="Input"></v-textbox>
+<v-textbox type="search" placeholder="Custom Place Holder" value="Input"></v-textbox>
+<v-textbox type="mail" value="Input"></v-textbox>
 
-<v-textbox type="Button" text="Input" buttontext="Alert" btn-click="alertMsg()"></v-textbox>
+<v-textbox type="Button" value="Input" buttontext="Alert" btn-click="alertMsg()"></v-textbox>
 <br />
 
 <v-gridview gridoptions="gridOptions" column-defs="name,age">
