--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
@@ -1,18 +1,18 @@
 ﻿<h1>Test View</h1>
-<v-textbox type="Standard" placeholder="Username" value="Input"></v-textbox>
-<v-textbox type="Icon" placeholder="Search .." icon="circular search" value="Input"></v-textbox>
-<v-textbox type="Icon" placeholder="Search .." icon="search" value="Input"></v-textbox>
-<v-textbox type="search" value="Input"></v-textbox>
-<v-textbox type="search" placeholder="Custom Place Holder" value="Input"></v-textbox>
-<v-textbox type="mail" value="Input"></v-textbox>
+<vr-textbox type="standard" placeholder="Username" value="Input"></vr-textbox>
+<vr-textbox type="icon" placeholder="Search .." icon="circular search" value="Input"></vr-textbox>
+<vr-textbox type="icon" placeholder="Search .." icon="search" value="Input"></vr-textbox>
+<vr-textbox type="search" value="Input"></vr-textbox>
+<vr-textbox type="search" placeholder="Custom Place Holder" value="Input"></vr-textbox>
+<vr-textbox type="mail" value="Input"></vr-textbox>
 
-<v-textbox type="Button" value="Input" buttontext="Alert" btn-click="alertMsg()"></v-textbox>
+<vr-textbox type="Button" value="Input" buttontext="Alert" btn-click="alertMsg()"></vr-textbox>
 <br />
 
-<v-gridview gridoptions="gridOptions" column-defs="name,age">
-</v-gridview>
+<vr-gridview gridoptions="gridOptions" column-defs="name,age">
+</vr-gridview>
 
-<v-gridview type="V1" gridoptions="gridOptionsV1">
-</v-gridview>
+<vr-gridview type="V1" gridoptions="gridOptionsV1">
+</vr-gridview>
 
 {{Input}}
